# todo_list

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml  secrets.example.toml
common/database/: db.py
common/security/: login_conf.py
todo_list/: main.py
todo_list/features/login/: login.py  login_controller.py
todo_list/features/todo/: todo.py  todo_controller.py
todo_list/features/todo/widgets/: cards.py
todo_list/models/: todo.py  user.py
todo_list/services/login/: login_service.py
todo_list/services/todo/: todo_service.py
