[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "IsaiasFMAlcantara",email = "isaiasofelix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "bcrypt (>=4.2.1)",
    "streamlit-card (>=1.0.2,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "streamlit run todo_list/main.py"